# ArcEDB

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
src/ARCEDB/comparison/: CMakeLists.txt  batch_bootstrap.cpp  batch_bootstrap.h  batch_comparable.cpp  batch_comparable.h  comparable.cpp  comparable.h  data.h  order.cpp  order.h  poly_eval.cpp  poly_eval.h  rgsw_ciphertext.cpp  rgsw_ciphertext.h
src/ARCEDB/conversion/: CMakeLists.txt  ciphertext_conversion.cpp  ciphertext_conversion.h  conversion.h  lwe_ciphertext.cpp  lwe_ciphertext.h  packlwes.cpp  packlwes.h  polyeval_bsgs.cpp  polyeval_bsgs.h  repack.cpp  repack.h  seal_util.cpp  seal_util.h  utils.cpp  utils.h
src/ARCEDB/utils/: CMakeLists.txt  ThreadPool.h  multi_thread.h  serialize.cpp  serialize.h  types.h  utils.h
test/: CMakeLists.txt  comparison_test.cpp  relational_queries_test.cpp  simd_comparison_test.cpp  time_series_queries_test.cpp
